Fixed bug where the search bar would overflow with small viewport and stretched screen

--- a/style.css
+++ b/style.css
@@ -37,8 +37,9 @@ form {
 }
 
 input[type="text"] {
-    width: 80%;
-    padding: 12px 16px;
+    width: clamp(250px, 85%, 600px);
+    padding: clamp(12px, 2.5vw, 20px);
+    font-size: 16px;
     background-color: #4d5156;
     border-radius: 24px;
     outline: none;
@@ -70,8 +71,19 @@ input[type="submit"]:hover {
     flex-direction: column;
     align-items: center;
     margin: auto;
+    width: 90%;
+    padding: clamp(10px, 2vw, 20px);
+
+}
+
+.outer-perimiter {
     width: 80%;
-    padding: 10px;
+    min-width: auto;
+    position: relative;
+    margin: 10vh auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
@@ -79,27 +91,29 @@ input[type="submit"]:hover {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    min-height: auto;
+    width: 100%;
+    min-height: 100%;
 }
-
-.outer-perimiter {}
 
 .pageTitle h1 {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: clamp(30px, 5vw + 1rem, 90px);
+    font-size: clamp(24px, 5vw + 1rem, 90px);
     color: white;
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
     object-position: center bottom;
-    margin: auto;
+    margin: clamp(10px, 3vh, 30px);
     width: auto;
     text-align: center;
+    line-height: 1, 2;
 }
 
 .submit-row {
     display: flex;
-    gap: 12px;
+    flex-wrap: wrap;
+    gap: 8px;
     justify-content: center;
     width: 100%;
+
 }
